more spacing fixes mobile

--- a/main.scss
+++ b/main.scss
@@ -65,7 +65,7 @@ background-color: $dark-blue;
 
     //mobile second
     @include breakpoint($mobile-breakpoint) {
-    padding: 1.25rem;
+    padding: 1.5rem;
     height: 5rem;
 }
 }
@@ -96,6 +96,7 @@ height: 7.75rem;
 
 @include breakpoint($mobile-breakpoint) {
      padding: 0; 
+     height: 4rem;
 }
 }
 
@@ -230,7 +231,7 @@ text-decoration: none;
  display: flex;
  background-color: white;
  align-items: center;
- margin: 6.25rem 0;
+ margin: 6.25rem 0 0 0;
  overflow: hidden;
  justify-content: center;
 
@@ -252,8 +253,6 @@ text-decoration: none;
     @include breakpoint($mobile-breakpoint) {
     flex: 0 0 100%;
     justify-content: center;
-    
-
  }
    
 }
@@ -272,6 +271,9 @@ text-decoration: none;
 
 .review__text {
     max-width: 26rem;
+    @include breakpoint($mobile-breakpoint) {
+    padding: 0 1rem,
+ }
 
 }
 
@@ -303,7 +305,7 @@ text-decoration: none;
  }
  }
 
- h2 {
+.challenges h2 {
 text-align: center;
 @include roboto;
 
@@ -313,7 +315,6 @@ text-align: center;
     @include breakpoint($mobile-breakpoint) {
         margin: 5rem 0 1.25rem 0;
         font-size: 2rem;
-    
  }
  }
 
@@ -422,6 +423,11 @@ margin: 0 auto;
   align-self: flex-end;
  }
 
+ .challenges .btn-container {
+     @include breakpoint($mobile-breakpoint) {
+    padding: 3rem 0;    
+ }
+}
 
 .quote {
     display: flex;
@@ -437,7 +443,7 @@ margin: 0 auto;
  
 
      @include breakpoint($mobile-breakpoint) {
-     padding: 6.25rem 0.625rem;
+     padding: 6.25rem 0.625rem 3.5rem 0.625rem;
     
  }
     
